--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1 class="font-bold text-4xl text-center pt-14 text-gray-600">Is this thig on?!?</h1>
+    <h1 class="text-5xl font-bold text-center text-gray-600 pt-24">Is this thing on?!?</h1>
 </body>
 
 </html>
